tests/compile-fail/invalid-cond.stderr
error: Nom-derive: unexpected type for Cond attribute. Expected type: Option
 --> $DIR/invalid-cond.rs:8:8
  |
8 |     a: u32,
  |        ^^^
